fixing spacing issues between project cards

--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,6 @@
   text-align: center;
 }
 
-.App-logo-1 {
-  animation: App-logo-spin infinite 10s linear;
-  height: 10vmin;
-  pointer-events: none;
-}
-.App-logo-2 {
-  animation: App-logo-spin infinite 5s linear;
-  height: 10vmin;
-  pointer-events: none;
-}
-.App-logo-3 {
-  animation: App-logo-spin infinite 2.5s linear;
-  height: 10vmin;
-  pointer-events: none;
-}
-.App-logo-4 {
-  animation: App-logo-spin infinite 1s linear;
-  height: 10vmin;
-  pointer-events: none;
-}
-.App-logo-5 {
-  animation: App-logo-spin infinite .5s linear;
-  height: 10vmin;
-  pointer-events: none;
-}
-.App-logo-6 {
-  animation: App-logo-spin infinite .1s linear;
-  height: 10vmin;
-  pointer-events: none;
-}
-
 
 .App-header {
   background-color: #282c34;
